# raylib-template

./: CMakeLists.txt  LICENSE  README.md
include/: ball.h
src/: ball.cpp  main.cpp
